# ChangeLog for dev-util/git
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.320 2009/02/11 22:44:38 robbat2 Exp $

*git-1.6.1.3 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.1.3.ebuild:
  Version bump.

*git-1.6.1.2 (30 Jan 2009)

  02 Feb 2009; Matt McCormick (thewtex) <matt@mmmccormick.com>
  +git-1.6.1.2.ebuild: new enhanced git ebuild.

*git-1.6.1.1 (26 Jan 2009)

  26 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +files/20090126-git-1.6.1.1-noperl.patch, +git-1.6.1.1.ebuild:
  Version bump. Also bug #254029 - fix noperl patch.

  18 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> -git-1.6.1.ebuild:
  remove broken ebuild

  16 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> +git-1.6.1-r1.ebuild,
  +files/20090113-git-1.6.1-noperl.patch:
  update noperl.patch for bug 254029

  08 Jan 2009; Brent Baude <ranger@gentoo.org> git-1.6.0.6.ebuild:
  Marking git-1.6.0.6 ppc64 for bug 251343

  06 Jan 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.1.ebuild:
  Version bump, bug 250321.

  01 Jan 2009; RaÃºl Porcel <armin76@gentoo.org> git-1.6.0.6.ebuild:
  s390/sh stable wrt #251343

  6 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> git-1.6.1.ebuild:
  enable perl by default

  6 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> git-1.6.1.ebuild:
  enable perl by default

*git-1.6.1 (2 Jan 2009)

  2 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> +git-1.6.1.ebuild:
  version bump

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> git-1.6.0.6.ebuild:
  ppc stable, bug #251343

  25 Dec 2008; Jeroen Roovers <jer@gentoo.org> git-1.6.0.6.ebuild:
  Stable for HPPA (bug #251343).

  23 Dec 2008; RaÃºl Porcel <armin76@gentoo.org> git-1.6.0.6.ebuild:
  alpha/arm/ia64 stable wrt #251343

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> git-1.6.0.6.ebuild:
  Factor out the long emake invocation so that we can consistently call it