@@ -27,11 +27,11 @@ DIST git-manpages-1.6.1.1.tar.bz2 231331 RMD160 3a641502738104bb3c5322643ab4c293
 DIST git-manpages-1.6.1.2.tar.bz2 231154 RMD160 d363cc4ad41a307d29b317efcdc95f5d03575839 SHA1 5f4d2b60984c4054629a17a01b10df552ee9478d SHA256 5262b8831283a19ea30e80446ca63ae103800c261276211f1deaeb15475a2244
 DIST git-manpages-1.6.1.3.tar.bz2 231623 RMD160 3db015f6bb0573730f7e0cf546d868e9cd961bab SHA1 581bd9917dd587c33a8c54c3cc678175f0489122 SHA256 ac3daa67b5f0a5bdf9c45dbf148c7f3c51e673f3a5460e00c55594a3cd51f1a4
 DIST git-manpages-1.6.1.tar.bz2 231011 RMD160 98f8af44e2b10898df0c4b599e0f88c0d57bda2c SHA1 fa2d94dc966484b14ae11d39d0d8336946a93001 SHA256 877b9648508cb57adc2f9059f8c72d05db2cc1a0286b225d1d18ab11f5c81242
-EBUILD git-1.6.0.1.ebuild 8416 RMD160 f66272869bf69e0a324e3bb340bb93fdfd57cb34 SHA1 27e7ba25a1161fbf0eca5c6181f798a793a99997 SHA256 8c8f4d6e22d28edcb28a633bee301b10d879995a53aefdaf05327e4a0a208ad4
-EBUILD git-1.6.0.6.ebuild 8591 RMD160 966b03a1e59a8a68a56ea7794b014bb8eb43ceda SHA1 e43ff5f15fa7ccec1c184c18c8da561e9a0b9e5a SHA256 942ebe6591124d0870fa64bf4700b7241616bb8c2717a04f1f4196c1eb1e1eb9
-EBUILD git-1.6.1-r1.ebuild 8509 RMD160 0ff11963f9e1f4012c08e4e2e136c7a3afde4735 SHA1 bcab045689d60ffa1330407fa93f6f957b76d52b SHA256 8aeab6b337a507b18c2bb8113cc40d0bdafb9f6040ce2b3de5d91a73c92f80aa
-EBUILD git-1.6.1.1.ebuild 8605 RMD160 5ba0aacd6084de03f87f5bcb49e53bfd1e3b522c SHA1 53427f6845e34d9b1738eb746263a880bcea1596 SHA256 3ab687c1f71ece1a743c4cf141a7300359d9b78e400e80bcd610ea98f898bfe2
-EBUILD git-1.6.1.2.ebuild 8969 RMD160 852f604ea1bcccb78a2cebb78e7fb1ba6028ef06 SHA1 b2bd7fc8612e269e179c2b9186d7495e7489aa60 SHA256 c7d1f0af137309596cc20debf421cd9af8258773e0e810d5f0c691a616eba282
-EBUILD git-1.6.1.3.ebuild 8605 RMD160 a6478e8eb4afb5dfa6b4b8d99a7c4e97f5704e99 SHA1 8b0e0f5a4c7453cfd5bb5e9a1c78eb930d2c3b54 SHA256 7de1be388d359f7cb81a91f54cd343e04ae6f2ee188de7e142a07c5f64d85407
-MISC ChangeLog 48687 RMD160 90af39656cd3e2863bceaccd0dc8348540b88c9c SHA1 0e8160ccd1a9874dacda4f94f76937ab9539f062 SHA256 160a519850d14b5fb2864457aeb58bb21ef3a893080b182a698809c732078771
-MISC metadata.xml 1539 RMD160 b8c0182e6c64bf0399c979942ec403c309a95019 SHA1 e3fbe7df1c4a5209d10ae82d7aa368df6bbf8a9e SHA256 9b0b2c3e7607e1e280edd997169c72799f37c7cac547bce3e294584eaabbb3e5
+EBUILD git-1.6.0.1.ebuild 8463 RMD160 e547d82bfd5ac9857c5db4a21d134986e6b13a2a SHA1 bf963ff45878c6cedb3f32d107c8f6c02ea2fb79 SHA256 f9c54ed309d791712d88db274a1a736c2fbfddfc1b61e9f60af57746c9704f5d
+EBUILD git-1.6.0.6.ebuild 8638 RMD160 90172e0be67c9a04cc4d7933d5076e41eef0333a SHA1 258e71a6b3f37f75d85c5fc1cc3ac08baf783ec5 SHA256 ab61b0ec2b82f06d6143ecd0292610949133fbe4f251f38e35ff0fc616bcbfef
+EBUILD git-1.6.1-r1.ebuild 8556 RMD160 d49c91ac35dd9830821c35578d6b5cf9a7a39d0c SHA1 666c0bcce6e1cff58288ddb5255b0c99b66134ce SHA256 fa54773db2d4d4aaba3948eb64b0977fe90266ff37e8a91175b984b8ef298bfd
+EBUILD git-1.6.1.1.ebuild 8652 RMD160 74a9b06fc57eed8c8611a7097239356f40b1341f SHA1 a599c8c3c1d1f427ff69fa40e2d4e10f87254cd7 SHA256 30e4c0bbb52c6a4707b059dab6542f5c89646884895b6b219681631276499063
+EBUILD git-1.6.1.2.ebuild 9016 RMD160 ae72d1b521cc7c321053553c447d7b8605da050f SHA1 bb07b647c4baadf966cf5804a4654a7acd827a38 SHA256 92274ab5bb706cf45ece2903b42c60a9a17cd70db33962cb4ac1385570a5fc7c
+EBUILD git-1.6.1.3.ebuild 8652 RMD160 e386708f7103fba99f171117cc69cf7bb678cfaf SHA1 7801e4170b3e91720132bc0bd33bc4b5857eca70 SHA256 3ea9330bd949504f26aa9a87f0b289a85b7350e4453ef95f7d3593d31ff3731e
+MISC ChangeLog 48829 RMD160 f0162bd8c9f44d8eacc6b62fbfbd102f7e6f66c9 SHA1 37f5b0de3411b5e3670246d3bf2926faec6ca6a5 SHA256 fb1d447b2c476eac2240af1ae0aa4ca470882d002e823036267b178602f00a3b
+MISC metadata.xml 1610 RMD160 822d13b80d0f3400752dae31d600ed419f4cac82 SHA1 83867b23bbb4c6b2937bec29eef2f6314b6dfd84 SHA256 4b642e72f93e51e54956c6a1e3a3078f79930352328878cc15fba598c83f5178
