@@ -29,6 +29,7 @@
 	<flag name="cgi">Install gitweb too</flag>
 	<flag name="mozsha1">Makes git use an optimized SHA1 routine from Mozilla that should be fast on non-x86 machines.</flag>
 	<flag name="ppcsha1">Make use of a bundled routine that is optimized for the PPC arch.</flag>
+	<flag name="quilt">Add support for quilt, for git-quiltimport.</flag>
 	<flag name="webdav">Adds support for push'ing to HTTP repositories via DAV.</flag>
 	<flag name="gtk">Include the gitview contrib tool.</flag>
 	<flag name="subversion">Include git-svn for <pkg>dev-util/subversion</pkg> support.</flag>
