@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.320 2009/02/11 22:44:38 robbat2 Exp $
 
+  12 Feb 2009; Daniel Cordero <theappleman@gmail.com>
+  Added quilt USE flag, so that dev-util/quilt can be pulled
+  in for git-quiltimport.
+
 *git-1.6.1.3 (11 Feb 2009)
 
   11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.1.3.ebuild:
